# farmbeast_simulation

./: CMakeLists.txt  README.md  package.xml
config/: robot.yaml
include/farmbeast_simulation/: control.hpp
launch/: gazebo.launch  robot_publisher.launch
rviz/: config.rviz
src/: control.cpp
urdf/: robot.urdf.xacro
urdf/include/: gazebo_control.xacro
world/: example.world
