<?xml version="1.0"?>
<package format="2">
  <name>farmbeast_simulation</name>
  <version>0.0.0</version>
  <description>The farmbeast_simulation package</description>


  <maintainer email="urban.kenda@gmail.com">Urban Kenda</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
